Changes with melon 1.4.0                                          09 Apr 2016
    *) Added Big Number.
    *) Added MD5.
    *) Added SHA1.
    *) Added DES and 3DES.
    *) Added RC4.
    *) Added AES.
    *) Added Base64.
    *) Added RSA.

Changes with melon 1.3.6                                          14 Dec 2015
    *) Supported json (not rely on any libraries).
    *) Reconstructed HTTP component.
    *) Optimized Hash component and added some new functions.
    *) Fixed a bug of file cache.

Changes with melon 1.3.5                                          22 Nov 2015
    *) Supported regular expression (not rely on PCRE).

Changes with melon 1.3.4                                          11 Nov 2015
    *) Removed some interfaces of connections.
    *) Added some new interface for connections.
    *) Fixed a bug of inter-thread communication.
    *) Optimized inter-process communication.
    *) Optimized inter-thread communication.

Changes with melon 1.3.3                                          06 Nov 2015
    *) Fixed some bugs of parsing HTTP protocol.
    *) Added an interface for HTTP protocol.
    *) Added an interface for TCP connection.

Changes with melon 1.3.2                                          22 Oct 2015
    *) Added one interface for the communication
       between master process and worker process.
    *) Added some interfaces for getting socket
       file descriptor of tcp connection.
    *) Added some interfaces for testing whether the
       chains are empty.
    *) Added a boot parameter for stop melon service.

Changes with melon 1.3.1                                          20 Oct 2015
    *) Fixed a bug of event component.
    *) Added a configuration command for log path.
    *) Added a boot parameter for reload configuration.

Changes with melon 1.3.0                                          17 Sep 2015
    *) Added a log level (Warn).
    *) Added two configuration command (max_nofile and
       core_file_size).