@@ -1,3 +1,7 @@
+Changes with melon 1.4.1                                          20 Apr 2016
+    *) Optimized division of Big Number.
+    *) Fixed some bugs of Big Number.
+
 Changes with melon 1.4.0                                          09 Apr 2016
     *) Added Big Number.
     *) Added MD5.
